test/org/midica/testfiles/failing/eff-func-pbr-with-percent.midica
INCLUDE inc/instruments.midica


0: pitch_bend_range.set(12.0%)
